// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./FiatValue.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      aria-label="$ 1,234.56"
      class=""
      data-mui-internal-clone-element="true"
      style="white-space: nowrap;"
    >
      $ 1,235
    </span>
  </div>
</div>
`;

exports[`./FiatValue.stories LargeValue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      aria-label="$ 1,234,567.89"
      class=""
      data-mui-internal-clone-element="true"
      style="white-space: nowrap;"
    >
      $ 1.23M
    </span>
  </div>
</div>
`;

exports[`./FiatValue.stories NullValue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      class="MuiTypography-root MuiTypography-body1 mui-style-fw8ds0-MuiTypography-root"
    >
      --
    </span>
  </div>
</div>
`;

exports[`./FiatValue.stories NumberValue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      aria-label="$ 9,999.99"
      class=""
      data-mui-internal-clone-element="true"
      style="white-space: nowrap;"
    >
      $ 10,000
    </span>
  </div>
</div>
`;

exports[`./FiatValue.stories Precise 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      class=""
      data-mui-internal-clone-element="true"
      style="white-space: nowrap;"
    >
      $ 1,234
      <span
        class="MuiTypography-root MuiTypography-body1 mui-style-i1lkuv-MuiTypography-root"
      >
        .57
      </span>
    </span>
  </div>
</div>
`;

exports[`./FiatValue.stories SmallValue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      aria-label="$ 0.00"
      class=""
      data-mui-internal-clone-element="true"
      style="white-space: nowrap;"
    >
      $ 0.00
    </span>
  </div>
</div>
`;

exports[`./FiatValue.stories WithMaxLength 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      aria-label="$ 123,456,789.12"
      class=""
      data-mui-internal-clone-element="true"
      style="white-space: nowrap;"
    >
      $ 123.46M
    </span>
  </div>
</div>
`;

exports[`./FiatValue.stories ZeroValue 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 mui-style-1xulk7h-MuiPaper-root"
    style="--Paper-shadow: none;"
  >
    <span
      aria-label="$ 0.00"
      class=""
      data-mui-internal-clone-element="true"
      style="white-space: nowrap;"
    >
      $ 0
    </span>
  </div>
</div>
`;
